# crypto-trading-agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
